
NEW FEATURES

* `read_docx` added to read in .docx dcouments.

* `start_end` added to find the locations of start/end places for the ones in a 
  binary vector.

* `run_split` added to split a string into run chunks.

* `shift`, `shift_left`, and `shift_right` added to shift vectors.

IMPROVEMENTS

* `counts2list` now uses a faster indexing to gain a speed boost.

qdapTools 1.0.4 - 1.1.0
----------------------------------------------------------------

NEW FEATURES

* `loc_split` added to split data forms (`list`, `vector`, `data.frame`, 
  `matrix`) on a vector of integer lcoations.

* `matrix2long` makes a long format data.frame.  It takes a matrix object, stacks 
  all columns and adds identifying columns by repeating row and column names
  accordingly.  

* `run_split` added to split strings into runs.


IMPROVEMENTS

* `split_vector` picks up a `regex` argument to allow for regular expression 
  search of break location.


qdapTools 1.0.3
----------------------------------------------------------------

BUG FIXES

* `lookup` threw an error with single length input `terms` and `missing=NULL`
  (see issue #6 for more).  This behavior has been fixed. 

* `lookup` changed the order of existing `data.frames` because of `data.table`'s
  scoping which modifies data in place.  This was spotted by Kirill Muller (see
  issue #7) and a solution provided by Matthew Flickinger 
  (http://stackoverflow.com/a/26046777/1000343).


qdapTools 1.0.2
----------------------------------------------------------------

BUG FIXES

* `lookup` would throw warning and convert to more restrictive mode when 
  (1) `terms` mode and `key.reassign` modes didn't match & (2) `missing = NULL`.
  This behavior has been fixed.  See issue #5.

NEW FEATURES

* `split_vector` added to split a `vector` into a list of vectors based on split 
  points.

IMPROVEMENTS

* `list2df` would return `rownames` matching the names of the original list 