@@ -2,14 +2,14 @@ Package: qdapTools
 Type: Package
 Title: Tools for the 'qdap' Package
 Version: 1.3.1
-Date: 2015-07-23
+Date: 2015-09-09
 Authors@R: c(person("Bryan", "Goodrich", role = "ctb"), person("Dason",
         "Kurkiewicz", role = "ctb"), person("Kirill", "Muller", role =
         "ctb"), person("Tyler", "Rinker", email =
         "tyler.rinker@gmail.com", role = c("aut", "cre")))
 Maintainer: Tyler Rinker <tyler.rinker@gmail.com>
 Depends: R (>= 3.0.0)
-Imports: chron, data.table (>= 1.9.4), methods, RCurl, XML
+Imports: chron, data.table (>= 1.9.5), methods, RCurl, XML
 Suggests: testthat
 LazyData: TRUE
 Description: A collection of tools associated with the 'qdap' package
