@@ -24,10 +24,28 @@
 #' t(mtabulate(dat))
 #' counts2list(mtabulate(dat))
 mtabulate <- function(vects) {
-    lev <- sort(unique(unlist(vects)))
-    dat <- do.call(rbind, lapply(vects, function(x, lev){ 
-        tabulate(factor(x, levels = lev, ordered = TRUE),
-        nbins = length(lev))}, lev = lev))
-    colnames(dat) <- sort(lev) 
-    data.frame(dat, check.names = FALSE)
+
+    x <- y <- . <- NULL
+    vects <- as.list(vects)
+    if (is.null(names(vects))) names(vects) <- seq_along(vects)
+    dat <- data.table::data.table(
+        x = names(vects),
+        y = vects
+    )
+    dat <- dat[, .(y = unlist(y)), by = x]
+    out <- suppressMessages(data.table::dcast(dat, x ~ y, fun=length, drop=FALSE, fill=0))
+    out2 <- as.data.frame(out[, -1, with=FALSE])
+    rownames(out2) <- out[[1]]
+    out2
 }
+## mtabulate <- function(vects) { #old version retired 9/9/15
+##     lev <- sort(unique(unlist(vects)))
+##     dat <- do.call(rbind, lapply(vects, function(x, lev){ 
+##         tabulate(factor(x, levels = lev, ordered = TRUE),
+##         nbins = length(lev))}, lev = lev))
+##     colnames(dat) <- sort(lev) 
+##     data.frame(dat, check.names = FALSE)
+## }
+
+
+
